[package]
name = "graphql-ws"
version = "0.3.2"
authors = ["Gordon Guan <admin@netdex.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.15" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
thiserror = "1.0"